src/test/contracts/negative/typer_unify_error_diff/int_vs_nat.mligo

let main (_p, s : int * int) : operation list * int =
  let x : int = 42 in
  let y : nat = x in
  ([] : operation list), s